--- a/SortingInNArraysOOP/SortingInNArraysOOP.cbp
+++ b/SortingInNArraysOOP/SortingInNArraysOOP.cbp
@@ -2,25 +2,21 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="SortingInNArrays2" />
+		<Option title="SortingInNArraysOOP" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/SortingInNArrays2" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/SortingInNArraysOOP" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add option="-pthread" />
 				</Compiler>
-				<Linker>
-					<Add option="-pthread" />
-				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/SortingInNArrays2" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/SortingInNArraysOOP" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
