--- a/SortingInNArraysOOP/SortingInNArraysOOP.cbp
+++ b/SortingInNArraysOOP/SortingInNArraysOOP.cbp
@@ -13,7 +13,11 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-pthread" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/SortingInNArraysOOP" prefix_auto="1" extension_auto="1" />
